--- a/style.css
+++ b/style.css
@@ -171,4 +171,27 @@ body {
   background: var(--Darkblue);
   border-radius: 15px;
   z-index: 1;
+  padding: 22px;
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 26px;
+  align-items: center;
+}
+
+.title h3 {
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.info h2 {
+  margin-bottom: 14px;
+  font-size: 50px;
+  font-weight: 300;
+}
+
+.info p {
+  color: var(--Desaturatedblue);
 }
